# little-warren

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: clean-architecture.md  git-commits.md  python-style.md  testing-patterns.md
.claude/skills/scanner/: SKILL.md
docs/: architecture.md
eval/: README.md
scripts/: big_validation.py  calibrate.py  universe_backtest.py
src/little_warren/: __init__.py
src/little_warren/application/: __init__.py
src/little_warren/application/analysis_service/: __init__.py  ports.py  service.py
src/little_warren/application/backtest_service/: __init__.py  service.py
src/little_warren/application/scan_service/: __init__.py  service.py
src/little_warren/config/: __init__.py  logging.py  settings.py
src/little_warren/domain/: __init__.py
src/little_warren/domain/analysis/: __init__.py  indicators.py  swings.py  waves.py
src/little_warren/domain/entities/: __init__.py  pick.py
src/little_warren/domain/rules/: __init__.py  impulse.py  linea_24.py
src/little_warren/domain/value_objects/: __init__.py  swing.py  trigger_line.py  wave.py
src/little_warren/infrastructure/: __init__.py
src/little_warren/infrastructure/cli/: main.py
src/little_warren/infrastructure/data/: __init__.py  universes.py  yfinance_provider.py
src/little_warren/infrastructure/ui/: __init__.py  app.py
tests/: conftest.py
tests/fixtures/: synthetic.py
tests/integration/: test_yfinance_provider.py
tests/unit/: test_analysis_service.py  test_backtest_service.py  test_impulse.py  test_indicators.py  test_linea_24.py  test_pick.py  test_scan_service.py  test_settings.py  test_swings.py  test_universes.py  test_waves.py  test_yfinance_cache.py
